fix overflow on piano keys

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ img {
     display: flex;
     align-items: end;
     flex-direction: column;
+    overflow: visible !important;
 }
 
 .halfkey {
